Ensure supporter logos remain aspect ratio
Otherwise they'd be stretched out due to the `width` property on the
elements.

--- a/_sass/modules/_supporters.sass
+++ b/_sass/modules/_supporters.sass
@@ -32,3 +32,4 @@
       max-width: 90%
       max-height: 90%
       vertical-align: middle
+      object-fit: contain
